feat(clinic): serve clinic data from database